package com.example.roombooking.pojo.room.booking.dto;

import com.example.roombooking.pojo.room.booking.RoomBooking;

public class RoomBookingDTO extends RoomBooking {
}
